# ztm-project-uchat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Trunk-release.toml  Trunk-release.win.toml  Trunk.toml  Trunk.win.toml  diesel.toml  justfile
backend/crypto/: Cargo.toml
backend/crypto/src/: lib.rs  password.rs  sign.rs
backend/migrations/2023-02-27-220340_uchat/: down.sql  up.sql
backend/query/: Cargo.toml  build.rs
backend/query/src/: error.rs  lib.rs  post.rs  schema.rs  session.rs  test_db.rs  user.rs  util.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  logging.rs  router.rs
backend/server/src/handler/: post.rs  user.rs
design/: database.dbm  license-pexels-sample-images  license-uxwing-icons
frontend/: Cargo.toml  LICENSE-menu  index.html  tailwind.config.js
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css  util.rs
frontend/src/elements/: appbar.rs  keyed_notification_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  content.rs  quick_respond.rs
frontend/src/page/: edit_profile.rs  home.rs  login.rs  new_post.rs  register.rs  trending.rs  view_profile.rs
frontend/src/page/home/: bookmarked.rs  liked.rs
frontend/src/page/new_post/: chat.rs  image.rs  poll.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/cookie/: Cargo.toml
shared/cookie/src/: lib.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs  user.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
tools/project-init/: Cargo.toml
tools/project-init/src/: main.rs
