[package]
name = "uchat_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.0"
bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel.git" }
chrono = { version = "0.4.23", features = ["serde"] }
diesel-derive-newtype = "=2.0.0-rc.0"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
password-hash = { version = "0.5.0", features = ["std"] }
r2d2 = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
url = { version = "2.2.2" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

uchat_domain = { path = "../../shared/domain", features = ["query"] }
uchat_endpoint = { path = "../../shared/endpoint" }

[dependencies.diesel]
features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
  "postgres_backend",
]
version = "=2.0.3"
default-features = false

[dev-dependencies]
dotenvy = "0.15.7"
uchat_crypto = { path = "../crypto" }
