[package]
name = "uchat_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "uchat_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["headers", "json", "macros"] }
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive", "env"] }
color-eyre = "0.6.2"
dotenvy = "0.15.6"
hyper = { version = "0.14.24", features = ["full"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = [
  "compression-gzip",
  "cors",
  "decompression-gzip",
  "fs",
  "trace",
] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

uchat_cookie = { path = "../../shared/cookie" }
uchat_crypto = { path = "../crypto" }
uchat_endpoint = { path = "../../shared/endpoint" }
uchat_query = { path = "../query" }
