[package]
name = "uchat_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { version = "0.3.1", features = ["serde"] }
once_cell = "1"
regex = "1"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1"
uuid = { version = "1.3.0", features = ["v4", "serde", "js"] }

# backend
diesel-derive-newtype = { version = "=2.0.0-rc.0", optional = true }

[dependencies.diesel]
version = "=2.0.3"
features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "postgres_backend",
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
]
default-features = false
optional = true

[features]
query = ["dep:diesel", "dep:diesel-derive-newtype"]
